--- a/.github/workflows/receiver-workflow.yml
+++ b/.github/workflows/receiver-workflow.yml
@@ -30,5 +30,5 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: coverage
-        path: ./target/site/jacoco
+        path: ./Receiver/StreamReceiver/target/site/jacoco
         retention-days: 21
